--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^2.0.3",
     "@sanity/ui": "^3.1.11",
     "@sanity/vision": "^5.9.0",
+    "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "groq": "^5.9.0",
